@@ -121,3 +121,78 @@ class TestUncommit(TestCaseWithTransport):
         os.chdir('tree')
         out, err = self.run_bzr('uncommit', '-r', '-1', retcode=1)
         self.assertEqual('No revisions to uncommit.\n', out)
+
+    def test_uncommit_merges(self):
+        wt = self.create_simple_tree()
+
+        tree2 = wt.bzrdir.sprout('tree2').open_workingtree()
+
+        tree2.commit('unchanged', rev_id='b3')
+        tree2.commit('unchanged', rev_id='b4')
+
+        wt.branch.fetch(tree2.branch)
+        wt.set_pending_merges(['b4'])
+        wt.commit('merge b4', rev_id='a3')
+
+        self.assertEqual('a3', wt.last_revision())
+        self.assertEqual([], wt.pending_merges())
+
+        os.chdir('tree')
+        out, err = self.run_bzr('uncommit', '--force')
+
+        self.assertEqual('a2', wt.last_revision())
+        self.assertEqual(['b4'], wt.pending_merges())
+
+    def test_uncommit_multiple_merge(self):
+        wt = self.create_simple_tree()
+
+        tree2 = wt.bzrdir.sprout('tree2').open_workingtree()
+
+        tree2.commit('unchanged', rev_id='b3')
+        wt.branch.fetch(tree2.branch)
+        wt.set_pending_merges(['b3'])
+        wt.commit('merge b3', rev_id='a3')
+
+        tree2.commit('unchanged', rev_id='b4')
+        wt.branch.fetch(tree2.branch)
+        wt.set_pending_merges(['b4'])
+        wt.commit('merge b4', rev_id='a4')
+
+        self.assertEqual('a4', wt.last_revision())
+        self.assertEqual([], wt.pending_merges())
+
+        os.chdir('tree')
+        out, err = self.run_bzr('uncommit', '--force', '-r', '2')
+
+        self.assertEqual('a2', wt.last_revision())
+        self.assertEqual(['b3', 'b4'], wt.pending_merges())
+
+    def test_uncommit_octopus_merge(self):
+        # Check that uncommit keeps the pending merges in the same order
+        wt = self.create_simple_tree()
+
+        tree2 = wt.bzrdir.sprout('tree2').open_workingtree()
+        tree3 = wt.bzrdir.sprout('tree3').open_workingtree()
+
+        tree2.commit('unchanged', rev_id='b3')
+        tree3.commit('unchanged', rev_id='c3')
+        wt.branch.fetch(tree2.branch)
+        wt.branch.fetch(tree3.branch)
+        wt.set_pending_merges(['b3', 'c3'])
+        wt.commit('merge b3, c3', rev_id='a3')
+
+        tree2.commit('unchanged', rev_id='b4')
+        tree3.commit('unchanged', rev_id='c4')
+        wt.branch.fetch(tree2.branch)
+        wt.branch.fetch(tree3.branch)
+        wt.set_pending_merges(['c4', 'b4'])
+        wt.commit('merge b4, c4', rev_id='a4')
+
+        self.assertEqual('a4', wt.last_revision())
+        self.assertEqual([], wt.pending_merges())
+
+        os.chdir('tree')
+        out, err = self.run_bzr('uncommit', '--force', '-r', '2')
+
+        self.assertEqual('a2', wt.last_revision())
+        self.assertEqual(['b3', 'c3', 'c4', 'b4'], wt.pending_merges())
